New in 1.00.01 (8-23-2006) 
Rearrange the controls so that the option of one or two drips/speakers/lights is before the Barrier options.  This way on a low resolution screen the tops of the controls can be seen and a user will not miss options. In the Sound panel the Audio box will move up with the one or two speaker controls.


New in 0.00.21 (5-25-2006)
Sound Module: Changed time unit to microsec.

New in 0.00.20 (5-24-2006)
Moved the option to make e-field vectors & curve black from the play area to a menu.

New in 0.00.19 (5-24-2006)
Connected pipe to middle of faucet.
Reduced speaker size & source controls at low window size.
Shrank wire to photon source.
Light Module:
    Lightened the default red for photon view.
    Screen is now hidden on rotation.
    Added an option to make e-field vectors & curve black.

New in 0.00.18 (5-22-2006)
Sound Module: Made the colors for the rotation glyph darker for particle view.
Fixed units on slit controls & source controls to match physical model.
Moved "Show Graph" button to the center so it doesn't obscure the 3D screen in light module.
Added a spanish launch file.
Added a babelfish spanish translation.
Bugfix: Source separation slider reads wrong value after faucets are dragged with the mouse.
Bugfix: Detector crosshair is opaque (solid white) on mac.

New in 0.00.16 (5-22-2006)
The grayscale and particles options are one on top of the other rather than side by side.
Moved the red x for closing a detector inside the detector (bottom left corner).
Bugfix: Slit Separation control never becomes enabled.
Light Module: Moved the screen close button to the center, reduced size.
Light Module: Moved the 'intensity graph' button to the center (away from close button).
Removed tick labels from slit control sliders.

New in 0.00.15 (5-22-2006)
Moved Wave Detectors to the front (to avoid having mouse clicks intercepted).

New in 0.00.14 (5-22-2006)
Bugfix:There is a long delay when enabling audio.