@@ -1,6 +1,7 @@
 New in 1.00.01 (8-23-2006) 
 Rearrange the controls so that the option of one or two drips/speakers/lights is before the Barrier options.  This way on a low resolution screen the tops of the controls can be seen and a user will not miss options. In the Sound panel the Audio box will move up with the one or two speaker controls.
-
+Added Reset All.
+Detector crosshairs can no longer attach to the body of the intensity display.
 
 New in 0.00.21 (5-25-2006)
 Sound Module: Changed time unit to microsec.
